<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/screen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textStyle="bold"
        android:textSize="75sp"
        android:paddingHorizontal="15dp"
        android:paddingVertical="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/numberLayout" />

    <LinearLayout
        android:id="@+id/numberLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <!-- First Column -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/ac"
                android:text="@string/ac"
                style="@style/Button1"/>
            <Button
                android:id="@+id/num7"
                android:text="@string/seven"
                style="@style/Button2"/>
            <Button
                android:id="@+id/num4"
                android:text="@string/four"
                style="@style/Button2"/>
            <Button
                android:id="@+id/num1"
                android:text="@string/one"
                style="@style/Button2"/>
            <Button
                android:id="@+id/off"
                android:textSize="23sp"
                android:text="@string/off"
                style="@style/Button1"/>
        </LinearLayout>

        <!-- Second Column -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/percen"
                android:text="@string/percen"
                android:textSize="25sp"
                style="@style/Button1"/>
            <Button
                android:id="@+id/num8"
                android:text="@string/eight"
                style="@style/Button2"/>
            <Button
                android:id="@+id/num5"
                android:text="@string/five"
                style="@style/Button2"/>
            <Button
                android:id="@+id/num2"
                android:text="@string/two"
                style="@style/Button2"/>
            <Button
                android:id="@+id/num0"
                android:text="@string/zero"
                style="@style/Button2"/>
        </LinearLayout>

        <!-- Third Column -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/div"
                android:text="@string/div"
                android:textSize="30sp"
                style="@style/Button1"/>
            <Button
                android:id="@+id/num9"
                android:text="@string/nine"
                style="@style/Button2"/>
            <Button
                android:id="@+id/num6"
                android:text="@string/six"
                style="@style/Button2"/>
            <Button
                android:id="@+id/num3"
                android:text="@string/three"
                style="@style/Button2"/>
            <Button
                android:id="@+id/point"
                android:text="@string/dot"
                style="@style/Button2"/>
        </LinearLayout>

        <!-- Fourth Column -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/del"
                android:textSize="25sp"
                android:text="@string/del"
                style="@style/Button1"/>
            <Button
                android:id="@+id/times"
                android:textSize="20sp"
                android:text="@string/x"
                style="@style/Button1"/>
            <Button
                android:id="@+id/min"
                android:text="@string/min"
                style="@style/Button1"/>
            <Button
                android:id="@+id/plus"
                android:text="@string/plus"
                style="@style/Button1"/>
            <Button
                android:id="@+id/equal"
                android:text="@string/equal"
                style="@style/Button1"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
